tabla de vulnerabilidades de docker

--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -64,3 +64,5 @@ jobs:
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
           fail-build: false   # para no detener el pipeline
+          severity-cutoff: medium
+          output-format: table
